--- a/Santhosh/templates/contact.html
+++ b/Santhosh/templates/contact.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form name="contactdetails" action="/contact" method="POST">
+<form name="contactdetails" action="/save" method="POST">
 <fieldset>
 
 <legend>Contact Details:</legend>
