--- a/Santhosh/templates/sucess.html
+++ b/Santhosh/templates/sucess.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-<h4>You are logged in as {{session['username']}}</h4>
+<h4>You are logged in as {{session['user']}}</h4>
 
 </header>
 
